    are deprecated and should not be used anymore.
  - Configure option --enable-vbe is deprecated and should not be used anymore.
    The VBE support is always automatically compiled in, in order to enable
    VBE support the bochsrc option "vga: extension=" has to be set to "vbe". If
    PCI is present, the "pcivga" device can be assigned to PCI slot.

- I/O Devices
  - Networking
    - new networking module 'slirp' (user mode networking using Slirp and a
      builtin DHCP server)
  - Hard drive / cdrom
    - implemented ATA commands "READ NATIVE MAX ADDRESS" and
      "READ NATIVE MAX ADDRESS EXT"
  - Sound
    - ported ES1370 soundcard emulation from Qemu, to enable configure with
        --enable-es1370 option
    - sound input implemented in the sound lowlevel module 'linux' (ALSA / OSS)

  - LGPL'd VGABIOS updated to current CVS
    - fixed DAC palette in 8 bpp VBE and Cirrus modes (using the same palette
      as VGA mode 0x13)
    - VBE: added HDTV resolutions (patch by Tristan Schmelcher)

- SF patches applied
  [3289448] optimized powerpc byte swapping by Heikki Lindholm
  [3292581] Core Audio first aid by Heikki Lindholm
  [3205979] Compilation fixes for OpenBSD by Brad Smith
  [3290979] acpi/muldiv64 endian bug by Heikki Lindholm
  [3289459] Mac OS X audio missing framework dependency by Heikki Lindholm
  [3267459] fix xrandr related crash by Heikki Lindholm
  [3190995] add eth backend based on Slirp by Heikki Lindholm

- these S.F. bugs were closed/fixed
  [3266738] GUI debugger does not update CPU mode correctly
  [3292571] SB16 doesn't reinit correctly
  [3175168] Cirrus CL-GD5446 emulation incorrect
  [3260134] Failed to compile when trace cache disabled
  [3197425] Error compile with vmx in vs2008/2010 and for correct x64

-------------------------------------------------------------------------
Changes in 2.4.6 (February 22, 2011):

Brief summary :
- Support more host OS to run on:
  - Include win64 native binary in the release.