@@ -289,10 +289,10 @@ void bx_piix3_c::write(Bit32u address, Bit32u value, unsigned io_len)
 
   switch (address) {
     case 0x00b2:
-#if BX_SUPPORT_ACPI
+#if BX_SUPPORT_PCI
       DEV_acpi_generate_smi((Bit8u)value);
 #else
-      BX_ERROR(("write %08x: APM command register not supported yet", value));
+      BX_ERROR(("write %08x: APM command register not supported without ACPI", value));
 #endif
       BX_P2I_THIS s.apmc = value & 0xff;
       break;
